# ivy-suite

./: Cargo.toml  README.md
crates/eval/: Cargo.toml  build.rs
crates/eval/src/: card.rs  five.rs  lib.rs  seven.rs
crates/nlh/: Cargo.toml
crates/nlh/src/eval/: card.rs  five.rs  mod.rs  seven.rs
