[package]
name = "eval"
build = "build.rs"
description = "Hand evaluation logic" 
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]

[dependencies]
phf = { version = "0.13.1", default-features = false }
thiserror.workspace = true

[build-dependencies]
phf_codegen = "0.13.1"
itertools = "0.14.0"